<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/logo_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingEnd="50dp">

    <TextView
        android:id="@+id/otp_validation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:elevation="5dp"
        android:fontFamily="@font/questrial_regular"
        android:text="@string/enter_your_phoneNumber"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/otp_validation_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/otp_validation_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_bg_6"
            android:fontFamily="@font/questrial_regular"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/otp_field_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/enter_otp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/otp_et_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/questrial_regular"
                android:hint="@string/et_line"
                android:inputType="phone"
                android:letterSpacing=".2"
                android:maxLength="4"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/send_otp_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:text="@string/verify_otp"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/otp_verify_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/resend_otp_timerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/questrial_regular"
                android:padding="5dp"
                android:textColor="@color/colorPrimary2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/user_addedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/questrial_regular"
        android:gravity="center"
        android:text="@string/add_user_success_message"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/user_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/questrial_regular"
            android:text="@string/enter_user_details"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_bg_new"
            android:fontFamily="@font/questrial_regular"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/user_addressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_bg_new"
            android:fontFamily="@font/questrial_regular"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/phoneNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_bg_new"
            android:fontFamily="@font/questrial_regular"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_bg_new"
            android:fontFamily="@font/questrial_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/set_pin_field"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/set_pin"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/set_pin_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/questrial_regular"
                android:hint="____"
                android:inputType="numberPassword"
                android:letterSpacing=".2"
                android:maxLength="4"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/confirm_pin_field"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/confirm_pin"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/confirm_pin_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/questrial_regular"
                android:hint="____"
                android:inputType="numberPassword"
                android:letterSpacing=".2"
                android:maxLength="4"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/questrial_regular"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/add_user"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>