<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:animateLayoutChanges="true"
    android:background="@drawable/logo_bg_big"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".account.ui.LoginActivity.LoginActivity">

    <LinearLayout
        android:id="@+id/PIN_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/enter_your_pin"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.labournet.neostar.Utils.KeyboardView
            android:id="@+id/pin_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/questrial_regular"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/lighter_red"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg_rounded_multi_"
            android:elevation="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>