<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="50dp">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/questrial_regular"
        android:gravity="center"
        android:textColor="@color/gray2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/businessDetailsETFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/business_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_bg_new"
            android:hint="@string/et_hint_business_title"
            android:inputType="text"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial_regular"
                android:text="@string/et_hint_business_type"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/businessType_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:prompt="@string/busiensstype_spinner"
                android:textAlignment="center" />

        </LinearLayout>

        <EditText
            android:id="@+id/business_administrator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_bg_new"
            android:hint="@string/et_hint_business_administrator_name"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />

        <EditText
            android:id="@+id/business_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_bg_new"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />

        <EditText
            android:id="@+id/business_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_bg_new"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />

        <EditText
            android:id="@+id/business_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_bg_new"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />

        <EditText
            android:id="@+id/business_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_bg_new"
            android:hint="@string/et_hint_web_address"
            android:inputType="textUri"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/businessDetails_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray2" />

        <TextView
            android:id="@+id/business_titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial_regular"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/gray2"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/business_typeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial_regular"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/gray2"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/business_adminNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial_regular"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/gray2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/business_phoneNumberTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial_regular"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/gray2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/business_emailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial_regular"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/gray2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/business_addressTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial_regular"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/gray2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/business_webAddressTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial_regular"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/gray2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/add_user_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/add_user"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>